# freeaskworld_closed_loop

./: .gitignore  QUICKREF.md  README.md  README_CONFIG.md  __init__.py  ros2.md  ros2server.bash
ClosedLoopUnity/: benchmarkplayer.cs
ClosedLoopUnity/Example/: ClosedLooptTest.unity
ClosedLoopUnity/WebRTC/: WebRTCManager.cs  WebRTCSignalingMessage.cs
ClosedLoopUnity/WebSocket/: Connection.cs  WebSocketManager.cs  WebSocketTest.cs
ClosedLoopUnity/WebSocket/Receiver/: JsonReceiver.cs
ClosedLoopUnity/WebSocket/Sender/: JsonSender.cs  RGBDSender.cs
baselines/: agent_baseline.py  constants.py  map_viewer.py  mapper.py  point_cloud_viewer.py  start.bash
baselines/cv_utils/: glee_detector.py  image_percevior.py
baselines/mapping_utils/: geometry.py  preprocess.py  projection.py  transform.py
freeaskworld_connector/: README.md  RGBDJPEGSender.cs  WebRTCManager.cs  example_start.bash  framework.py  handlers.py  messages.py  preview_http.py  requirements.txt  server.py  simple_baseline.py  start.bash  start_cloudflared.py  webrtc_bridge.py  webrtc_receiver.py  webrtc_server.py
freeaskworld_connector/config/: .env  .env.example  CONFIG.md  README.md  __init__.py  configure.sh
ros2/: server.py  simple_baseline.py
ros2/install/: local_setup.ps1  local_setup.sh  setup.sh
ros2/install/vln_connector/share/vln_connector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/log/: latest_build
ros2/src/simulator_messages/: CMakeLists.txt
webrtc_connector/: __init__.py  example_start.bash  messages.py
(+40 files in other folders)
