<?xml version="1.0"?>
<package format="3">
  <name>vln_connector</name>
  <version>0.0.1</version>
  <description>VLN RGBD Connector Node</description>
  <maintainer email="3478428491@qq.com">PENG Yuhang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>simulator_messages</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>